# latticefold_plus

./: Cargo.toml  README.md  Readme.md
.cargo_home/: .global-cache
.cargo_home/registry/cache/index.crates.io-6f17d22bba15001f/: ark-crypto-primitives-0.5.0.crate  ark-crypto-primitives-macros-0.5.0.crate  ark-ec-0.5.0.crate  ark-poly-0.5.0.crate  ark-relations-0.5.1.crate  ark-snark-0.5.1.crate  cargo-husky-1.5.0.crate  clap-4.5.53.crate  clap_builder-4.5.53.crate  enum-ordinalize-4.3.2.crate  enum-ordinalize-derive-4.3.2.crate  tracing-0.1.43.crate  tracing-core-0.1.35.crate
.cargo_home/registry/src/index.crates.io-6f17d22bba15001f/ark-crypto-primitives-0.5.0/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-6f17d22bba15001f/ark-crypto-primitives-macros-0.5.0/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-6f17d22bba15001f/ark-ec-0.5.0/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-6f17d22bba15001f/ark-poly-0.5.0/: .cargo_vcs_info.json  Cargo.toml
latticefold-plus/: Cargo.toml
proptest-regressions/cyclotomic_ring/: tests.txt
src/: lib.rs  linalg.rs  poly_ring.rs  ring.rs  traits.rs
src/balanced_decomposition/: convertible_ring.rs  mod.rs  representatives.rs
src/cyclotomic_ring/: balanced_coefficients.rs  coeff_form.rs  constants.rs  crt.rs  error.rs  flatten.rs  mod.rs  ntt_form.rs  ntt_params.rs  params.rs  ring.rs  ring_config.rs  ring_element.rs  tests.rs  traits.rs
src/cyclotomic_ring/models/goldilocks/: mod.rs  ntt.rs  utils.rs
(+20 files in other folders)
