[package]
name = "latticefold_pl"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"
rayon = "1.7.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.3.23", features = ["derive"] }
log = "0.4.20"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1.4"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
